--- a/My_Judgment_Project/Manually_Scarpped_data/datapipeline_notebook.ipynb
+++ b/My_Judgment_Project/Manually_Scarpped_data/datapipeline_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9c63b78f",
    "metadata": {},
    "outputs": [
@@ -16,11 +16,11 @@
    ],
    "source": [
     "import os\n",
-    "import fitz  # PyMuPDF\n",
+    "import fitz  \n",
     "import re\n",
     "import json\n",
     "\n",
-    "# --- CONFIGURATION ---\n",
+    "\n",
     "INPUT_FOLDER = 'judgments'\n",
     "OUTPUT_FOLDER = 'structured_output'\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0f4982e1",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "# --- HELPER FUNCTIONS FOR EXTRACTION ---\n",
+    "\n",
     "\n",
     "def extract_metadata(full_text):\n",
     "   \n",
@@ -51,7 +51,7 @@
     "        'petitioner': 'Not Found', 'respondent': 'Not Found',\n",
     "        'judgment_date': 'Not Found'\n",
     "    }\n",
-    "    # (The rest of the function code is the same as before)\n",
+    "    \n",
     "    court_match = re.search(r\"IN THE (SUPREME COURT OF INDIA|HIGH COURT OF [A-Z ]+)\", full_text, re.IGNORECASE)\n",
     "    if court_match: metadata['court'] = court_match.group(0).strip()\n",
     "    case_no_match = re.search(r\"([A-Z\\.\\s]+\\s?(?:NO|Number)\\.\\s\\d+\\sOF\\s\\d{4})\", full_text, re.IGNORECASE)\n",
@@ -68,7 +68,7 @@
     "    \"\"\"\n",
     "    Extracts key sections like facts, arguments, and ratio.\n",
     "    \"\"\"\n",
-    "    # (The function code is the same as before)\n",
+    "   \n",
     "    extracted_sections = {}\n",
     "    section_markers = {\n",
     "        'facts': [r\"FACTS OF THE CASE\", r\"BRIEF FACTS\", r\"THE FACTUAL MATRIX\", r\"BACKGROUND\"],\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e1a7450d",
    "metadata": {},
    "outputs": [
@@ -126,23 +126,21 @@
     }
    ],
    "source": [
-    "# --- INTERACTIVE TESTING CELL ---\n",
-    "# Pick one file from your 'judgments' folder to test with\n",
-    "test_file_name = 'j1.pdf' # <--- CHANGE THIS to a real file name from your folder\n",
+    "test_file_name = 'j1.pdf' \n",
     "\n",
-    "# Extract text from this single file\n",
+    "\n",
     "test_file_path = os.path.join(INPUT_FOLDER, test_file_name)\n",
     "full_text = \"\"\n",
     "with fitz.open(test_file_path) as doc:\n",
     "    for page in doc:\n",
     "        full_text += page.get_text()\n",
     "\n",
-    "# Test the metadata function\n",
+    "\n",
     "metadata_result = extract_metadata(full_text)\n",
     "print(\"--- METADATA FOUND ---\")\n",
     "print(json.dumps(metadata_result, indent=2))\n",
     "\n",
-    "# Test the section extraction function\n",
+    "\n",
     "sections_result = extract_sections(full_text)\n",
     "print(\"\\n--- SECTIONS FOUND ---\")\n",
     "print(json.dumps(sections_result, indent=2))"
@@ -150,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bf001611",
    "metadata": {},
    "outputs": [
@@ -181,11 +179,9 @@
     }
    ],
    "source": [
-    "# --- MAIN SCRIPT LOGIC ---\n",
-    "\n",
     "print(\"Starting judgment processing pipeline...\")\n",
     "\n",
-    "# Create the output directory if it doesn't exist\n",
+    "\n",
     "if not os.path.exists(OUTPUT_FOLDER):\n",
     "    os.makedirs(OUTPUT_FOLDER)\n",
     "    print(f\"Created output folder: {OUTPUT_FOLDER}\")\n",
